tests/baselines/reference/duplicateExportAssignments.errors.txt
tests/cases/conformance/externalModules/foo1.ts(3,1): error TS2300: Duplicate identifier 'export='.
tests/cases/conformance/externalModules/foo1.ts(4,1): error TS2300: Duplicate identifier 'export='.
tests/cases/conformance/externalModules/foo2.ts(3,1): error TS2300: Duplicate identifier 'export='.
tests/cases/conformance/externalModules/foo2.ts(4,1): error TS2300: Duplicate identifier 'export='.
tests/cases/conformance/externalModules/foo3.ts(7,1): error TS2300: Duplicate identifier 'export='.
tests/cases/conformance/externalModules/foo3.ts(8,1): error TS2300: Duplicate identifier 'export='.
tests/cases/conformance/externalModules/foo4.ts(1,1): error TS2300: Duplicate identifier 'export='.
tests/cases/conformance/externalModules/foo4.ts(8,1): error TS2300: Duplicate identifier 'export='.
tests/cases/conformance/externalModules/foo5.ts(4,1): error TS2300: Duplicate identifier 'export='.
tests/cases/conformance/externalModules/foo5.ts(5,1): error TS2300: Duplicate identifier 'export='.
tests/cases/conformance/externalModules/foo5.ts(6,1): error TS2300: Duplicate identifier 'export='.


==== tests/cases/conformance/externalModules/foo1.ts (2 errors) ====
    var x = 10;
    var y = 20;
    export = x;
    ~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'export='.
    export = y;
    ~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'export='.
    
==== tests/cases/conformance/externalModules/foo2.ts (2 errors) ====
    var x = 10;
    class y {};
    export = x;
    ~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'export='.
    export = y;
    ~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'export='.
    
==== tests/cases/conformance/externalModules/foo3.ts (2 errors) ====
    module x {
    	export var x = 10;
    }
    class y {
    	y: number;
    }
    export = x;
    ~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'export='.
    export = y;
    ~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'export='.
    
==== tests/cases/conformance/externalModules/foo4.ts (2 errors) ====
    export = x;
    ~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'export='.
    function x(){
    	return 42;
    }
    function y(){
    	return 42;
    }
    export = y;
    ~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'export='.
    
==== tests/cases/conformance/externalModules/foo5.ts (3 errors) ====
    var x = 5;
    var y = "test";
    var z = {};
    export = x;
    ~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'export='.
    export = y;
    ~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'export='.
    export = z;
    ~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'export='.
    